--- a/draft/conclusion.tex
+++ b/draft/conclusion.tex
@@ -2,17 +2,17 @@
 \label{sec:conclusion}
 
 In this paper, we have presented GPU implementations of HOG-based object
-detection and their performance evaluation.
+detection and their detailed performance evaluation.
 Unlike preceding work that highly stressed on performance improvements,
 our implementations are based on an analysis of performance bottlenecks
 posed due to an introduction of the deformable models in HOG-based
 object detection.
-This approach ensures that the GPU truly accelerates approapriate
+This approach ensures that the GPU truly accelerates appropriate
 computational blocks.
-Our evaluation using a commodity GPU showed that our GPU implementation
-can speed up the existing HOG-based vehicle detection program tailored
-to the deformable models by 3x to 5x over traditional CPU
-implementations.
+Our experimental results using commodity GPUs showed that our GPU
+implementations can speed up the existing HOG-based vehicle detection
+program tailored to the deformable models by 3x to 5x over traditional
+CPU implementations.
 Given that this performance improvement is obtained from the entire
 program runtime rather than particular algorithm parts of the program,
 our contribution is useful and significant for real-world applications
@@ -27,8 +27,8 @@ the impact of GPUs in performance.
 Our conclusion is that GPUs are promising to meet the required
 performance of vision-based object detection in the real world.
 
-In future work, we plan to complement this work with systemized
-coordinations of computations and I/O devices.
+In future work, we plan to complement this work with systematized
+coordination of computations and I/O devices.
 Since real-world applications require camera sensors to obtain input
 images while GPUs are compute devices off the host computer, the data
 I/O latency could become a non-trivial bottleneck on the data bus.
