completed all the figures and filled in 6 pages

--- a/draft/abstract.tex
+++ b/draft/abstract.tex
@@ -1,3 +1,4 @@
+\begin{abstract}
 Visione-based object detection using camera sensors is an essential piece
 of perception for autonomous vehicles.
 Various combinations of features and models can be applied to increase
@@ -15,3 +16,4 @@ We apply the presented technique to the real-world vehicle detection
 program and demonstrate that our implementation using commodity
 GPUs can achieve speedups of 3x to 5x in frame-rate over sequential
 and multithreaded implementations using traditional CPUs.
+\end{abstract}
