--- a/draft/assumption.tex
+++ b/draft/assumption.tex
@@ -21,7 +21,7 @@ See \cite{Felzenszwalb10} for the detail.
 
 \begin{figure}[t]
  \begin{center}
-  \includegraphics[width=\hsize]{fig/deformable_model.eps}\\
+  \includegraphics[width=0.95\hsize]{fig/deformable_model.eps}\\
   \caption{Vehicle detection flow with deformable models.}
   \label{fig:deformable_model}
  \end{center}
