--- a/draft/references.bib
+++ b/draft/references.bib
@@ -338,14 +338,14 @@ year = {2012}
 @misc{NVIDIA_Fermi,
 author = {NVIDIA},
 title = {{NVIDIA's next generation CUDA computer architecture: Fermi}},
-howpublished = {\url{http://www.nvidia.com/content/PDF/fermi_white_papers/NVIDIA_Fermi_Compute_Architecture_Whitepaper.pdf}},
+howpublished = {\url{http://www.nvidia.com/}},
 year = {2009}
 }
 
 @misc{NVIDIA_Kepler,
 author = {NVIDIA},
 title = {{NVIDIA's next generation CUDA computer architecture: Kepler GK110}},
-howpublished = {\url{http://www.nvidia.com/content/PDF/kepler/NVIDIA-Kepler-GK110-Architecture-Whitepaper.pdf}},
+howpublished = {\url{http://www.nvidia.com/}},
 year = {2012}
 }
 
