--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -20,11 +20,9 @@
 Features and Deformable Models}
 
 \author{
-\IEEEauthorblockN{Manato Hirabayashi, Shinpei Kato, Masato Edahiro}
-\IEEEauthorblockA{Dept. of Information Engineering\\Nagoya University}
-\and
-\IEEEauthorblockN{Kazuya Takeda}
-\IEEEauthorblockA{Dept. of Media Science\\Nagoya University}
+\IEEEauthorblockN{Manato Hirabayashi, Shinpei Kato, Masato Edahiro, and
+Kazuya Takeda}
+\IEEEauthorblockA{School of Information Science\\Nagoya University}
 \and
 \IEEEauthorblockN{Taiki Kawano and Seiichi Mita}
 \IEEEauthorblockA{Research Center for Smart Vehicles\\Toyota
