--- a/draft/abstract.tex
+++ b/draft/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-Visione-based object detection using camera sensors is an essential piece
+Vision-based object detection using camera sensors is an essential piece
 of perception for autonomous vehicles.
 Various combinations of features and models can be applied to increase
 the quality and the speed of object detection.
