--- a/draft/assumption.tex
+++ b/draft/assumption.tex
@@ -7,7 +7,7 @@ We use CUDA \cite{NVIDIA_CUDA} for GPU programming, whose development
 environment can be downloaded from NVIDIA's website \cite{NVIDIA_NVCC}.
 Input images are loaded from pre-captured JPEG files, since we focus on
 a high computational cost of image processing.
-Systemized coordinations of computations and I/O devices are outside the
+Systematized coordination of computations and I/O devices are outside the
 scope of this paper.
 The use of multiple GPUs is also not in consideration.
 
@@ -37,7 +37,7 @@ paper, utilizing the vehicle models provided by prior work
 A brief concept of this approach is illustrated in
 Fig.~\ref{fig:deformable_model}.
 Although these models achieve a high detection rate, the computational
-cost of scoring similarity of an imput image and the models using HOG
+cost of scoring similarity of an input image and the models using HOG
 features is very expensive.
 Specifically they include $2$ root filters and $12$ part filters, each
 of which needs to be scored against $32$ resized images.
