--- a/draft/conclusion.tex
+++ b/draft/conclusion.tex
@@ -26,7 +26,7 @@ programming is efficient for the object detection program and quantified
 the impact of GPUs in performance.
 Our conclusion is that GPUs are promising to meet the required
 performance of vision-based object detection in the real world, while
-performance optimizations remain open problems.
+performance optimization remain open problems.
 
 In future work, we plan to complement this work with systematized
 coordination of computations and I/O devices.
