--- a/draft/introduction.tex
+++ b/draft/introduction.tex
@@ -37,7 +37,7 @@ This paper presents GPU implementations of HOG-based object detection in
 consideration of real-world applications using deformable part models
 \cite{Felzenszwalb10}.
 While this is a popular vision-based object detection approach, what
-remains an open question is a genelized programming technique and a
+remains an open question is a generalized programming technique and a
 quantification of performance characteristics for practical use.
 We begin with an analysis of traditional CPU
 implementations to find fundamental performance bottlenecks of HOG-based
@@ -45,7 +45,7 @@ object detection.
 This analysis reasons about our approach to GPU implementations that we
 offload only the detected compute-intensive blocks of the object
 detection program to the GPU.
-The experimental results obstained from a real-world vehicle detection
+The experimental results obtained from a real-world vehicle detection
 program show that commodity GPUs outperform high-performance multi-core
 CPUs by 3x to 5x in frame-rate, though at least another 5x improvement
 would be needed to deploy in the real world.
